--- a/src/main/resources/global-config.properties
+++ b/src/main/resources/global-config.properties
@@ -1,8 +1,9 @@
 # tpi/src/main/resources/global-config.properties
 # Server ports
 server.port.gateway=8080
-server.port.pruebas=8081
-server.port.tpi=8082
+server.port.employees=8081
+server.port.pruebas=8082
+server.port.notificaciones=8083
 
 # Database configuration
 database.url=jdbc:postgresql://localhost:5432/tpi_db
