--- a/notificaciones/pom.xml
+++ b/notificaciones/pom.xml
@@ -25,6 +25,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+    <dependency>
+      <groupId>com.backend.grupo71</groupId>
+      <artifactId>empleados</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
