Crear posicion controller, service y repository. Llamada a API ajena

--- a/pruebas/src/main/resources/application.yml
+++ b/pruebas/src/main/resources/application.yml
@@ -13,3 +13,5 @@ spring:
     name: pruebas-service
 server:
   port: 8082
+external:
+  api-url: https://labsys.frc.utn.edu.ar/apps-disponibilizadas/backend/api/v1/configuracion/
