Agregar llamada a API de empleados para ver si el empleado existe

--- a/pruebas/src/main/resources/application.yml
+++ b/pruebas/src/main/resources/application.yml
@@ -15,3 +15,4 @@ server:
   port: 8082
 external:
   api-url: https://labsys.frc.utn.edu.ar/apps-disponibilizadas/backend/api/v1/configuracion/
+  gateway-url: https://localhost:8081
