--- a/notificaciones/pom.xml
+++ b/notificaciones/pom.xml
@@ -20,7 +20,6 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -30,11 +29,19 @@
           <artifactId>spring-boot-starter-data-jpa</artifactId>
       </dependency>
     <dependency>
-      <groupId>com.backend.grupo71</groupId>
-      <artifactId>empleados</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-community-dialects</artifactId>
+ </dependency>
   </dependencies>
   <build>
     <plugins>
