--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,3 +7,16 @@ server:
 spring:
   main:
     web-application-type: reactive
+    allow-bean-definition-overriding: true
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: cliente-tpi
+            client-secret: ZmiMMce6zh4xKHde1FFKbfkiThDyYpyn
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+      resourceserver:
+          jwt:
+            issuer-uri:  https://labsys.frc.utn.edu.ar/aim/
