--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>5.0.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
         <version>${spring-cloud.version}</version>
