--- a/notificaciones/src/main/resources/application.yml
+++ b/notificaciones/src/main/resources/application.yml
@@ -18,6 +18,6 @@ mail:
     host: smtp.gmail.com
     port: 587
     user: tpbackend7@gmail.com
-    password: -----
+    password: vxpg qpoe soey oqxt
     starttls:
       enable: true
