--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: https://labsys.frc.utn.edu.ar/aim/realms/backend-tps
+logging:
+  level:
+    org.springframework.security: DEBUG
