--- a/notificaciones/pom.xml
+++ b/notificaciones/pom.xml
@@ -42,6 +42,10 @@
     <groupId>org.hibernate.orm</groupId>
     <artifactId>hibernate-community-dialects</artifactId>
  </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-core</artifactId>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
